--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -193,10 +193,14 @@ a:hover{
   flex-direction: column;
 }
 .button{
-  padding: 1rem;
-  border: .1rem #808080 solid;
+  padding: .5rem;
+  /* padding-left: 1rem; */
+  border: .1rem #c0c0c0 solid;
   border-radius: 0.5rem;
   cursor: pointer;
+  background-color: #202020;
+  color: #fff;
+  font-weight: bold;
 }
 .button:hover{
   border: .1rem #404040 solid;
@@ -226,6 +230,8 @@ a:hover{
   background-color: #f0f0f0; 
   border-radius: .5rem;
   padding: 1rem;
+  /* position: relative; */
+  height: 100%;
 }
 .cart-list-container {
   padding: 0;
@@ -254,6 +260,11 @@ align-items: flex-end;
   flex: 1 1;
 }
 .cart-name{
+  flex: 8 1;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.cart-delete {
   flex: 8 1;
 }
 .cart-price{
